# cost-vision-insight

./: .env  .gitignore  ENV_TEMPLATE  README.md  SETUP_INSTRUCTIONS.md  check-articles.sh  docker-compose.yml  index.html  synthetic_orders.csv
backend/: indices.csv
backend/cost-model-service/: .env.example  .gitignore  ASYNC_PROCESSING_ARCHITECTURE.md  Dockerfile  OPENAI_INTEGRATION.md  README.md  SETUP.md  pyproject.toml  requirements.txt  start.sh
backend/cost-model-service/alembic/: env.py
backend/cost-model-service/alembic/versions/: 0001_initial.py  0002_add_value_per_gram.py  0003_make_value_per_gram_nullable.py  0004_add_file_fields_to_articles.py  0005_add_processing_status.py  0006_add_similar_articles.py  0007_add_direct_cost_eur.py
backend/cost-model-service/app/: main.py
backend/cost-model-service/app/api/: deps.py
backend/cost-model-service/app/api/routes/: __init__.py  analyze.py  articles.py  cost_models.py  estimates.py  indices.py  orders.py
backend/cost-model-service/app/core/: config.py
backend/cost-model-service/app/db/: session.py
backend/cost-model-service/app/models/: __init__.py  article.py  cost_model.py  index.py  order.py
backend/cost-model-service/app/schemas/: article.py  cost_model.py  estimates.py  index.py  order.py
backend/cost-model-service/app/scripts/: load_indices_from_csv.py  load_indices_from_excel.py  load_orders_from_csv.py
backend/cost-model-service/app/services/: article_processor.py  cost_model_builder.py  openai_client.py  weaviate_service.py
frontend/: .dockerignore  ARTICLE_DATA_FLOW.md  Dockerfile  (+5 more)
(+29 files in other folders)
