[project]
name = "cost-model-service"
version = "0.1.0"
description = "Cost Model Service API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.29",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic-settings==2.4.0",
    "pydantic==2.7.0",
    "python-dotenv==1.0.1",
    "openai==1.14.3",
    "httpx==0.27.0",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
